<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_230sdp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/logo_navigation_drawer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"
            android:background="@color/colorPrimaryDark"
            android:weightSum="10"></LinearLayout>

        <LinearLayout
            android:id="@+id/movies_navigation_drawer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.7"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="@dimen/_4sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_local_movies_black_24dp" />

            <TextView
                style="@style/NormalDarktBoldText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="left|center_vertical"
                android:padding="@dimen/_3sdp"
                android:text="@string/movies_navigation_drawer"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_shows_navigation_drawer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.7"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="@dimen/_4sdp"
                android:scaleType="fitXY"
                android:src="@drawable/tv_button" />

            <TextView
                style="@style/NormalDarktBoldText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="left|center_vertical"
                android:padding="@dimen/_3sdp"
                android:text="@string/tv_shows_navigation_drawer"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/people_navigation_drawer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.7"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="@dimen/_4sdp"
                android:scaleType="fitXY"
                android:src="@drawable/person" />

            <TextView
                style="@style/NormalDarktBoldText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="left|center_vertical"
                android:padding="@dimen/_3sdp"
                android:text="@string/people_navigation_drawer"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favourites_navigation_drawer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.7"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="@dimen/_4sdp"
                android:scaleType="fitXY"
                android:src="@drawable/star_button" />

            <TextView
                style="@style/NormalDarktBoldText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="left|center_vertical"
                android:padding="@dimen/_3sdp"
                android:text="@string/favourite_navigation_drawer"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp"
            android:background="@color/colorPrimaryDark"
            android:weightSum="10"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimary"
            android:weightSum="10"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"
            android:background="@color/colorPrimaryDark"
            android:weightSum="10"></LinearLayout>

        <LinearLayout
            android:id="@+id/setting_navigation_drawer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.7"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="@dimen/_4sdp"
                android:scaleType="fitXY"
                android:src="@drawable/setting_button" />

            <TextView
                style="@style/NormalDarktBoldText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="left|center_vertical"
                android:padding="@dimen/_3sdp"
                android:text="@string/options_navigation_drawer"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/privacy_policy_navigation_drawer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.7"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="@dimen/_4sdp"
                android:scaleType="fitXY"
                android:src="@drawable/icon_privacy_policy" />

            <TextView
                style="@style/NormalDarktBoldText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="left|center_vertical"
                android:padding="@dimen/_3sdp"
                android:text="@string/privacy_policy_navigation_drawer"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_developer_navigation_drawer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.7"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="@dimen/_4sdp"
                android:scaleType="fitXY"
                android:src="@drawable/contact_button" />

            <TextView
                style="@style/NormalDarktBoldText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="left|center_vertical"
                android:padding="@dimen/_3sdp"
                android:text="@string/contact_developer_navigation_drawer"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>